[metadata]
name = comepos_fetcher
description = COMEPOS data fetcher
# long_description = file: README.md
# long_description_content_type = text/markdown
author = N. Cellier
author_email = contact@nicolas-cellier.net
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
packages = find:
test_suite = tests
include_package_data = True
zip_safe = False
install_requires =
    loguru
    requests
    tqdm
    uplink
    attr
    pandas
    tqdm
    python-slugify
    python-box
    cachetools
    pendulum
    requests
    apscheduler
    appdirs

[options.extras_require]
dev =
    pytest
    pylint

[check]
metadata = True

[flake8]
max-line-length = 88
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, _version.py

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
